footer shrinks on smaller resized screens, mobile mainly unaffected

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,8 @@
     <a href="https://www.linkedin.com/in/danielsegarra36/"
       ><i class="fa-brands fa-linkedin-in"></i></a
     >
-    <a href="https://www.github.com/danielsegarra36/"><i class="fa-brands fa-github"></i></a
+    <a href="https://www.github.com/danielsegarra36/"
+      ><i class="fa-brands fa-github"></i></a
     >
     <a href="https://www.dribbble.com/DanielSegarra36"
       ><i class="fa-brands fa-dribbble"></i></a
@@ -25,11 +26,7 @@
       ><i class="fa-brands fa-medium"></i></a
     >
     <a href="https://replit.com/@DanielSegarra36"
-      ><svg
-        viewBox="3 3 27 27"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
+      ><svg viewBox="3 3 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
         <defs></defs>
         <path
           d="M7 5.5C7 4.67157 7.67157 4 8.5 4H15.5C16.3284 4 17 4.67157 17 5.5V12H8.5C7.67157 12 7 11.3284 7 10.5V5.5Z"
@@ -56,7 +53,7 @@
     justify-content: center;
     padding: 0 2rem;
   }
-  
+
   .socials {
     width: fit-content;
   }
@@ -71,5 +68,12 @@
   }
   .socials svg:hover {
     opacity: 1;
+  }
+
+  @media screen and (max-width: 356px) {
+    .socials svg,
+    .socials i {
+      margin: 0.5rem 1rem;
+    }
   }
 </style>
