--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -14,11 +14,8 @@ let pd = "50px";
 ---
 
 <MainLayout title="Daniel Segarra: Portfolio">
-  <div class="wrap">
-    <!-- <div class="spacer"></div> -->
-    <div class="work">
-      <div class="work_left">
-        <div class="work_text">
+  <div class="window_split_sticky_scroll">
+    <div class="scroll_window">
           <WorkInfo
             label="01"
             title_line_1="Auto"
@@ -52,47 +49,37 @@ let pd = "50px";
             button_text="play now"
           />
         </div>
-      </div>
-      <div class="work_right">
-        <div class="work_right_bl">
-          <div class="work_photo">
-            <div class="work_photo_item" title="1">
-              <img
+    <div class="sticky_window">
+      <img
+        class="sticky_content"
+        title="1"
+        alt="fruit"
                 src="https://source.unsplash.com/random/400×400/?fruit"
-                alt=""
-              />
-            </div>
-
-            <div class="work_photo_item" title="2">
+      />
+      <img
+        class="sticky_content"
+        title="2"
+        alt="AI"
+        src="https://source.unsplash.com/random/400×400/?ai"
+      />
               <!-- <iframe
                 src="http://sumaryzethat.danielsegarra.dev/"
                 width="100%"
                 height="100%"
                 frameborder="0"></iframe> -->
               <img
-                src="https://source.unsplash.com/random/400×400/?ai"
-                alt=""
-              />
-            </div>
-
-            <div class="work_photo_item" title="3">
-              <img
+        class="sticky_content"
+        title="3"
+        alt="spaceship"
                 src="https://source.unsplash.com/random/400×400/?spaceship"
-                alt=""
               />
-            </div>
-
-            <div class="work_photo_item" title="4">
               <img
+        class="sticky_content"
+        title="4"
+        alt="yahtzee dice"
                 src="https://source.unsplash.com/random/400×400/?yahtzee%20dice"
-                alt=""
               />
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-    <!-- <div class="spacer"></div> -->
   </div>
 </MainLayout>
 
@@ -107,154 +94,85 @@ let pd = "50px";
     pd,
   }}
 >
+  :root {
+    --pr-color: #fff;
+    --second-color: #0a0a0a;
+    --color-1-1: #be2518;
+    --color-1-2: #ff6b4f;
+  }
+
   * {
     box-sizing: border-box;
     font-family: "Syne", sans-serif;
     font-weight: 800;
     margin: 0;
     padding: 0;
-    font-feature-settings:
-      "pnum" on,
-      "lnum" on;
+    /* font-feature-settings: "pnum" on, "lnum" on; */
   }
 
   body {
-    background-color: var(--second_color);
+    background-color: var(--second-color);
   }
 
-  .wrap {
+  .window_split_sticky_scroll {
     position: relative;
     width: 100%;
     height: auto;
     padding: 0 20px;
     z-index: 1;
-  }
-
-  .content {
-    width: 100%;
-    height: auto;
-  }
-
-  /* Pinned Image */
-  .spacer {
-    width: 100%;
-    height: 50vh;
-    background-color: #ddd;
-  }
-
-  .work {
     display: flex;
   }
 
-  .work_left {
+  .scroll_window {
     position: relative;
     width: 54%;
     z-index: 2;
     /* outline: 1px solid red; */
   }
 
-  .work_text {
-    margin: auto;
-    width: 80%;
-  }
-
-  .work_info {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* outline: 1px solid green; */
-  }
-
-  .work_num {
-    display: block;
-    line-height: 0.9;
-    text-align: right;
-    font-size: 10px;
-    transform: skew(-20deg);
-    color: var(--color_1_1);
-  }
-
-  .work_title {
-    text-align: right;
-    font-size: 70px;
-    text-transform: uppercase;
-    color: var(--pr_color);
-  }
-
-  .work_title .stroke {
-    display: block;
-    color: transparent;
-    -webkit-text-stroke: 1px var(--pr_color);
-  }
-
-  .work_link {
-    display: block;
-    width: 365px;
-    margin-top: 50px;
-    margin-left: auto;
-    padding: 18px 0;
-    font-size: 20px;
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: var(--pr_color);
-    letter-spacing: 4px;
-    border: 2px solid var(--color_1_1);
-    border-radius: 30px;
-    transition: 0.4s;
-  }
-
-  .work_link:hover {
-    background: var(--color_1_1);
-    color: var(--color_1_2);
-    letter-spacing: 6px;
-  }
-
-  .work_right {
+  .sticky_window {
     width: 46%;
-    height: auto;
-    /* background: green; */
-  }
-
-  .work_right_bl {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: sticky;
-    width: 100%;
     height: 100vh;
-    top: 0;
-    /* height: 80vh;
-     top: 10vh;
-  background-color:#fF6b4f */
-  }
-
-  .work_photo {
-    width: 40vw;
-    height: 30vw;
-    position: relative;
-  }
-
-  .work_photo_item {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    position: sticky;
+    top: 25vh;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* max-width: 400px; */
+    max-width: 30%;
+    height: 50vh;
+    /* margin-right: auto; */
     cursor: pointer;
     border-radius: 80px;
     overflow: hidden;
+    margin: 25vh auto 25vh 0px;
+    margin-top: 25vh;
   }
 
-  .work_photo_item img {
+  .sticky_content {
+    position: absolute;
     display: block;
+
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+    background-color: black;
+    text-align: center;
+    color: white;
+    font-size: 2rem;
+    line-height: 30vh;
   }
+
+  .sticky_content:not(:last-child) {
+    clip-path: none;
+  }
+
   @media screen and (max-width: 500px) {
-    .work_photo {
-      height: 80vw;
-      top: -120px;
+    .sticky_window {
+      top: 15%;
+      margin-top: 0px;
+      margin-left: auto;
+      margin-right: 0;
     }
   }
 </style>
@@ -292,18 +210,18 @@ let pd = "50px";
       lenis.raf(time * 1000);
     });
 
-    let workInfoItems = document.querySelectorAll(".work_photo_item");
+    let workInfoItems = document.querySelectorAll(".sticky_content");
     workInfoItems.forEach(function (item, index) {
       item.style.zIndex = workInfoItems.length - index;
     });
 
-    gsap.set(".work_photo-item", {
+    gsap.set(".sticky_content", {
       clipPath: function () {
         return "inset(0px 0px 0px 0px)";
       },
     });
 
-    const animation = gsap.to(".work_photo_item:not(:last-child)", {
+    const animation = gsap.to(".sticky_content:not(:last-child)", {
       clipPath: function () {
         return "inset(0px 0px 150% 0px)";
       },
@@ -312,11 +230,12 @@ let pd = "50px";
     });
 
     ScrollTrigger.create({
-      trigger: ".work",
+      trigger: ".window_split_sticky_scroll",
       start: "top-top",
       end: "bottom bottom",
       animation: animation,
-      scrub: 1,
+      scrub: 2,
+      // scrub: workInfoItems.length,
     });
   });
 </script>
@@ -333,16 +252,3 @@ let pd = "50px";
   is:inline
   src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"
 ></script>
-<!-- <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollToPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/TextPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/EaselPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/MotionPathPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/DrawSVGPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/Physics2DPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/PhysicsPropsPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrambleTextPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/CustomEase.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/CustomWiggle.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/BezierPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ColorPropsPlugin.min.js"></script>
-  <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/RoundPropsPlugin.min.js"></script> -->
