--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -51,7 +51,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    padding: 0 2rem;
+    padding: 1rem 2rem 0;
   }
 
   .socials {
