--- a/src/layouts/PerspectiveContainer.astro
+++ b/src/layouts/PerspectiveContainer.astro
@@ -17,6 +17,7 @@
     align-items: center; */
     perspective: 1000px;
     height: 100%;
+    width: 100%;
     /* overflow-x: hidden; */
     display: flex;
     justify-content: center;
