expanded svg filter/shadow effect so its no longer cut off

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,8 +30,9 @@ let fourth = 132;
                 <filter
                   id="shadow_filter"
                   filterUnits="userSpaceOnUse"
-                  height="1600px"
-                  width="1600px"
+                  height="200%"
+                  max="200%"
+                  y="-20%"
                 >
                 <feDropShadow
                   dx="3"
