fixing typo in svg filter dimensions

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -31,7 +31,7 @@ let fourth = 132;
                   id="shadow_filter"
                   filterUnits="userSpaceOnUse"
                   height="200%"
-                  max="200%"
+                  width="200%"
                   y="-20%"
                 >
                 <feDropShadow
