--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -446,7 +446,7 @@ let fourth = 132;
 <script define:vars={{ firstColor, secondColor, thirdColor, fourth }}>
 function changeSVG(event) {
   console.log("HI FROM CHANGESVG");
-  const absolute = event.absolute;
+    // const absolute = event.absolute;
   const alpha = event.alpha;
   const beta = event.beta;
   const gamma = event.gamma;
